[package]
name = "npm-offline"
version = "0.1.0"
edition = "2021"
authors = ["Antoine Langlois <antoine.l@antoine-langlois.net>"]
description = "A tool to download npm packages and their dependencies for offline usage."

[dependencies]
base16ct = { version = "0.2", features = ["alloc"] }
clap = { version = "4.4", features = ["derive"] }
nom = "7.1"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
thiserror = "1.0"
url = "2.4"
